# askitty

./: .gitignore  Cargo.toml  LICENSE.md  README.md
src/: ai.rs  cli.rs  lib.rs  main.rs  setup.rs  types.rs
src/ai/: mod.rs
src/ai/im/: client.rs  mod.rs  traits.rs
src/ai/llm/: client.rs  traits.rs
src/cli/: config.rs  mod.rs  repl.rs  utils.rs
src/errors/: mod.rs
src/storage/: kv.rs  mod.rs  traits.rs
src/types/: config.rs  im.rs  llm.rs  mod.rs
web/: index.html  install.sh  styles.css
