[package]
name = "askitty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termimad = "0.29.2"
dirs = "4.0.0"
sled = "0.34.7"
bincode = "1.3.3"
whoami = "0.9.0"
uuid = { version = "1.8.0", features = ["v4"] }
chrono = "0.4.38"
config = "0.13"